# you-education

./: .env  Makefile  README.md  docker-compose.yaml  package-lock.json
backend/: .env  .env.template  .gitignore  Dockerfile  README.md  langchain-chunking-test.ipynb  langchain-chunking.ipynb  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1200d6417644_references_and_chunks.py  a079509a3c2b_exams_and_subjects.py
backend/app/: config.py  logger.py  main.py
backend/app/routers/: __init__.py  chat.py  exams.py  metadata.py  mindmap.py  references.py  subjects.py
backend/app/utils/milvus/: __init__.py  client.py
backend/app/utils/minio/: __init__.py  client.py
backend/app/utils/models/: __init__.py  chat.py  exams.py  internal.py  metadata.py  references.py  subjects.py
backend/app/utils/mongodb/: __init__.py  client.py
backend/app/utils/postgres/: __init__.py  base.py  schema.py
backend/app/utils/youtube/: __init__.py  client.py
backend/init/: milvus_migrations.py  mongodb_migrations.py
backend/test_data/: zep_docs.txt
frontend/: Dockerfile  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: chat.tsx  mindmap.tsx  notes.tsx  resizable_panel.tsx  resources.tsx  tabs_container.tsx  video_description.tsx  (+1 more)
test_data/: Slides Time Comp.docx  Sorting and Searching Ada.txt  Unit 1 (Algorithm Intro).docx  backtracking intro unit 5.pptx  ch-4 intro.txt  prism and kruskal .md  sssp and mst intro unit 3.md  unit 5 remaining topics.pptx
(+21 files in other folders)
