[tool.poetry]
name = "you-education"
version = "0.1.0"
description = "AI powered study companion which helps you to study better and faster."
authors = ["Devasheesh Mishra <devasheeshmishra4@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
sqlalchemy = "^2.0.36"
python-dotenv = "^1.0.1"
sqlalchemy-utils = "^0.41.2"
pydantic-settings = "^2.7.1"
psycopg2-binary = "^2.9.10"
colorlog = "^6.9.0"
toml = "^0.10.2"
alembic = "^1.15.2"
minio = "^7.2.15"
openai = "^1.75.0"
langchain-community = "^0.3.21"
python-multipart = "^0.0.20"
langchain = "^0.3.23"
uvicorn = "^0.34.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
